# goodvibes

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  HACKING.md  MAINTAINING.md  Makefile.am  NEWS  README.md  RELEASING.md  THANKS.md  autogen.sh  configure.ac  goodvibes-launcher.sh  hacking.env  meson.build  meson_options.txt
.gitlab-ci/: Dockerfile.debian  Dockerfile.fedora  build.sh  docker-build-image.sh  docker-run-image.sh  style-check.sh
build-aux/: post-install
data/: Makefile.am  com.elboulangero.Goodvibes.appdata.xml.in  com.elboulangero.Goodvibes.desktop.in  com.elboulangero.Goodvibes.desktop.in.in  com.elboulangero.Goodvibes.gschema.xml.in  com.elboulangero.Goodvibes.service.in  goodvibes-client.1.in  goodvibes.1.in  io.gitlab.Goodvibes.appdata.xml.in  io.gitlab.Goodvibes.desktop.in  io.gitlab.Goodvibes.gschema.xml.in  meson.build
data/icons/: meson.build
data/ui/: app-menu.glade  main-window.glade  menubar.glade  meson.build  prefs-window.glade  station-dialog.glade  station-window.glade  status-icon-menu.glade  ui-validator.sh
docs/: Makefile  conf.py  index.md  index.rst  screenshots.rst  under-the-hood.md
libcaphe/: Makefile.am  README.md  meson.build
libcaphe/caphe/: Makefile.am  caphe-cup.c  caphe-cup.h  caphe-dbus-inhibitor.c  caphe-dbus-invokator.c  caphe-dbus-invokator.h  caphe-dbus-proxy.c  caphe-dbus-proxy.h  caphe-inhibitor-list.c  caphe-inhibitor-list.h  caphe-inhibitor.c  caphe-inhibitor.h  caphe-login-dbus-invokator.c  caphe-login-dbus-invokator.h  caphe-main.c  caphe-portal-dbus-invokator.c  caphe-portal-dbus-invokator.h  caphe-power-dbus-invokator.c  caphe-power-dbus-invokator.h  caphe-session-dbus-invokator.c  caphe-session-dbus-invokator.h  caphe-trace.h  caphe.c  caphe.h  meson.build
libcaphe/caphe/tests/: Makefile.am  main.c  meson.build
libcaphe/tests/: Makefile.am  main.c
po/: LINGUAS  POTFILES  POTFILES.in  ca.po  cmn.po  cs.po  da.po  de.po  en_US.po  es.po  fi.po  fr.po  goodvibes.pot  hi.po  (+17 more)
src/: Makefile.am  client.c  default-stations.h  gv-console-application.c  gv-console-application.h  gv-graphical-application.c  gv-graphical-application.h  main.c  meson.build  options.c  options.h
src/additions/: glib-object.c  glib-object.h  glib.c  glib.h  gst.h  gtk.h
src/base/: glib-additions.c  glib-additions.h  glib-object-additions.c  glib-object-additions.h  gv-base.c  gv-base.h  gv-configurable.c  gv-configurable.h  gv-errorable.c  gv-errorable.h  gv-feature.c  gv-feature.h  gv-param-specs.h  log.c  log.h  meson.build  uri-schemes.c  uri-schemes.h  utils.c  utils.h  vt-codes.h
src/base/tests/: meson.build  utils.c
src/core/: gst-additions.c  gst-additions.h  gv-browser.c  gv-browser.h  gv-core-internal.h  gv-core.c  gv-core.h  gv-engine.c  gv-engine.h  gv-metadata.c  gv-metadata.h  gv-playback.c  gv-playback.h  gv-player.c  gv-player.h  gv-playlist.c  gv-playlist.h  gv-station-details.c  gv-station-details.h  gv-station-list.c  gv-station-list.h  gv-station.c  gv-station.h  gv-streaminfo.c  gv-streaminfo.h  meson.build  playlist-utils.c  playlist-utils.h
src/core/tests/: meson.build  metadata.c  playlist-utils.c  station-list.c
src/core/tests/playlists/: abc-adelaide.pls  gyusyabu.pls  levillage-canalb.m3u  metalon.xspf  nonstopplay-midband.ram  nostalgia.asx  outpost-acoustic.m3u  radiofabrik.m3u  somafm-metal130.pls  somafm-reggae256.m3u  trancebase.asx  wnyc-fm.pls
src/feat/: gv-console-output.c  gv-console-output.h  gv-dbus-server-mpris2.c  gv-dbus-server-mpris2.h  gv-dbus-server-native.c  gv-dbus-server-native.h  gv-dbus-server.c  gv-dbus-server.h  gv-feat.c  gv-feat.h  gv-hotkeys.c  gv-hotkeys.h  gv-inhibitor-impl.c  gv-inhibitor-impl.h  gv-inhibitor.c  gv-inhibitor.h  gv-notifications.c  gv-notifications.h  meson.build
src/framework/: glib-additions.c  glib-additions.h  glib-object-additions.c  glib-object-additions.h  gst-additions.c  gst-additions.h  gtk-additions.c  gtk-additions.h  gv-configurable.c  gv-configurable.h  gv-errorable.c  gv-errorable.h  gv-feature.c  gv-feature.h  gv-file-helpers.c  gv-file-helpers.h  gv-framework.c  gv-framework.h  gv-list.c  gv-param-specs.h  log.c  log.h  meson.build  uri-schemes.c  uri-schemes.h  utils.c  utils.h  vt-codes.h
src/libcaphe/: README.md  caphe-cup.c  caphe-cup.h  caphe-dbus-inhibitor.c  caphe-dbus-inhibitor.h  caphe-dbus-invokator.c  caphe-dbus-invokator.h  caphe-dbus-proxy.c  caphe-dbus-proxy.h  caphe-inhibitor-list.c  caphe-inhibitor-list.h  caphe-inhibitor.c  caphe-inhibitor.h  caphe-login-dbus-invokator.c  caphe-login-dbus-invokator.h  caphe-portal-dbus-invokator.c  caphe-portal-dbus-invokator.h  caphe-power-dbus-invokator.c  caphe-power-dbus-invokator.h  caphe-session-dbus-invokator.c  caphe-session-dbus-invokator.h  caphe-trace.h  caphe.c  caphe.h  meson.build
src/libcaphe/tests/: main.c  meson.build
src/ui/: gtk-additions.c  gtk-additions.h  gv-about-dialog.c  gv-about-dialog.h  gv-certificate-dialog.c  gv-certificate-dialog.h  gv-keyboard-shortcuts-window.c  gv-keyboard-shortcuts-window.h  gv-main-window-manager.c  gv-main-window-manager.h  gv-main-window-standalone.c  gv-main-window-standalone.h  gv-main-window-status-icon.c  gv-main-window-status-icon.h  gv-main-window.c  gv-main-window.h  gv-playlist-view.c  gv-playlist-view.h  gv-prefs-window.c  gv-prefs-window.h  gv-search-result-tree-view.c  gv-search-result-tree-view.h  gv-station-context-menu.c  gv-station-context-menu.h  gv-station-dialog.c  gv-station-dialog.h  gv-station-properties-box.c  gv-station-properties-box.h  gv-station-view.c  gv-station-view.h  gv-station-window.c  gv-station-window.h  gv-stations-tree-view.c  gv-stations-tree-view.h  gv-status-icon.c  gv-status-icon.h  gv-ui-helpers.c  gv-ui-helpers.h  gv-ui-internal.h  gv-ui.c  (+4 more)
src/ui/resources/: app-menu.glade  app-menu.ui  io.gitlab.Goodvibes.Ui.gresource.xml.in  main-window.glade  menubar.glade  meson.build  playlist-view.glade  prefs-window.glade  shortcuts-window.ui  station-dialog.glade  station-properties-box.glade  station-view.glade  status-icon-menu.glade  status-icon-menu.ui
(+54 files in other folders)
