# SPDX-License-Identifier: GPL-3.0-only

option('tests', type: 'boolean', value: true,
       description: 'Build the test suite (requires mutest)')

option('ui-enabled', type: 'boolean', value: true,
       description: 'Enable the graphical user interface (depends on GTK)')

option('feat-console-output', type: 'boolean', value: true,
       description: 'Enable the console-output feature')

option('feat-dbus-server', type: 'boolean', value: true,
       description: 'Enable the dbus-server feature')

option('feat-hotkeys', type: 'boolean', value: true,
       description: 'Enable the hotkeys feature (requires ui, depends on keybinder)')

option('feat-inhibitor', type: 'boolean', value: true,
       description: 'Enable the inhibitor feature (requires ui)')

option('feat-notifications', type: 'boolean', value: true,
       description: 'Enable the notifications feature (requires ui)')
